--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -281,6 +281,7 @@
     <ClInclude Include="..\public\Skill_Player.h" />
     <ClInclude Include="..\public\TalkHud.h" />
     <ClInclude Include="..\public\TestMonster.h" />
+    <ClInclude Include="..\Public\Ursa.h" />
     <ClInclude Include="..\Public\WaterEA.h" />
     <ClInclude Include="..\Public\Wolf.h" />
     <ClInclude Include="..\Public\Node.h" />
@@ -414,6 +415,7 @@
     <ClCompile Include="..\private\Skill_Player.cpp" />
     <ClCompile Include="..\private\TalkHud.cpp" />
     <ClCompile Include="..\private\TestMonster.cpp" />
+    <ClCompile Include="..\Private\Ursa.cpp" />
     <ClCompile Include="..\Private\WaterEA.cpp" />
     <ClCompile Include="..\Private\Wolf.cpp" />
     <ClCompile Include="..\Private\Node.cpp" />
