--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -358,6 +358,9 @@
     <ClInclude Include="..\Public\Fire_explosion.h">
       <Filter>05.Effect\FlogasDungeon\FireExplosion</Filter>
     </ClInclude>
+    <ClInclude Include="..\Public\Ursa.h">
+      <Filter>02.GameObjects\Character\Enemy\Ursa</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -701,6 +704,9 @@
     </ClCompile>
     <ClCompile Include="..\Private\Fire_explosion.cpp">
       <Filter>05.Effect\FlogasDungeon\FireExplosion</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\Ursa.cpp">
+      <Filter>02.GameObjects\Character\Enemy\Ursa</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1074,6 +1080,9 @@
     </Filter>
     <Filter Include="05.Effect\FlogasDungeon\FireExplosion">
       <UniqueIdentifier>{2f2b2acf-e036-4abb-821b-33d2424bada9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02.GameObjects\Character\Enemy\Ursa">
+      <UniqueIdentifier>{93a0abd7-38e9-4bfc-96c3-1778de104aac}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
