--- a/Assets/Scenes/ShopUI.yaml
+++ b/Assets/Scenes/ShopUI.yaml
@@ -11,7 +11,7 @@ GameObjects:
     Hovering: false
     Com_Transform:
       Position: [248.695618, 360]
-      Size: [557.570801, 1000.74615]
+      Size: [697.641052, 1000.74615]
     Com_VIBuffer:
       TexturePath: ..\..\Assets\UITexture\Hud\WindowBg.png
       TextureMaskPath: ""
@@ -21,6 +21,7 @@ GameObjects:
     Children:
       - 14943875813476588455
       - 12519216463723988365
+      - 18018357948290202187
   - Name: ShopName
     UUID: 12519216463723988365
     Active: false
@@ -57,21 +58,59 @@ GameObjects:
     Layer: Default
     Instancing: false
     Type: UI
-    SortingOrder: 7
-    PassIndex: 1
+    SortingOrder: 6
+    PassIndex: 6
     Hovering: true
     Com_Transform:
-      Position: [444.783356, 670.514404]
-      Size: [106.881622, 50.1993561]
+      Position: [540, 677.952454]
+      Size: [80, 32]
     Com_VIBuffer:
       TexturePath: ..\..\Assets\UITexture\Hud\Onhead_TextBubble.png
-      TextureMaskPath: ""
+      TextureMaskPath: ..\..\Assets\UITexture\Hud\Btn_Fx_Over_Line2.dds
       TextureNoisePath: ""
       TextureAnyPath: ""
       Color: [0, 0, 0, 1]
     Com_Text:
       Text: "   \n  Buy"
       Color: [1, 1, 1, 1]
-      Scale: [1, 1]
+      Scale: [0.75, 0.75]
       LayerDepth: 0
       IsCenter: true
+  - Name: ShopScrollBG
+    UUID: 18018357948290202187
+    Active: false
+    Layer: Default
+    Instancing: false
+    Type: UI
+    SortingOrder: 6
+    PassIndex: 1
+    Hovering: false
+    Com_Transform:
+      Position: [540, 360]
+      Size: [16, 512]
+    Com_VIBuffer:
+      TexturePath: ..\..\Assets\UITexture\scroll\long_Scroll.dds
+      TextureMaskPath: ""
+      TextureNoisePath: ""
+      TextureAnyPath: ""
+      Color: [0, 0, 0, 1]
+    Children:
+      - 3954626335804931860
+  - Name: ShopScrollBar
+    UUID: 3954626335804931860
+    Active: false
+    Layer: Default
+    Instancing: false
+    Type: UI
+    SortingOrder: 6
+    PassIndex: 1
+    Hovering: true
+    Com_Transform:
+      Position: [540, 148.181854]
+      Size: [8, 64]
+    Com_VIBuffer:
+      TexturePath: ..\..\Assets\UITexture\scroll\Scroll_Block.dds
+      TextureMaskPath: ""
+      TextureNoisePath: ""
+      TextureAnyPath: ""
+      Color: [0, 0, 0, 1]
